public/client/assets/css/main.css
/* ... */
@media (max-width:767px) {
    .featured-category {
        grid-template-columns: repeat(2, 1fr);
        gap: 10px;
    }
}

/*=====================================================
    04 Post Layout
======================================================*/
.post-layout-1 {
    display: grid;
    grid-template-columns: 1fr 1.5fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 30px;
    grid-row-gap: 30px;
}

.post-layout-item .post-thumb {
    display: block;
    width: 100%;
    height: 220px;
    overflow: hidden;
}

.post-layout-item .post-thumb img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.post-layout-item .post-meta {
    display: flex;
    align-items: center;
    column-gap: 15px;
    margin-bottom: 10px;
}

.post-layout-item .post-meta li {
    display: flex;
    align-items: center;
    column-gap: 5px;
    font-family: var(--dl-heading-font);
    font-size: 16px;
    font-weight: 500;
    color: var(--dl-body-color);
}

.post-layout-item .post-meta li a{
    color: var(--dl-body-color);
}

.post-layout-item .post-meta li.reading-time svg {
    margin-top: -2px;
}

.post-layout-item .post-meta li svg {
    width: 20px;
    height: 20px;
    color: var(--dl-grey-color);
}

.post-layout-item .post-content {
    background-color: var(--dl-white-color);
    padding: 20px;
    margin-right: 15px;
    margin-top: -80px;
    position: relative;
    z-index: 1;
}

.post-layout-item .post-content h3 {
    font-size: 20px;
    line-height: 24px;
    margin-bottom: 20px;
}

.post-layout-item .post-content p {
    margin-bottom: 30px;
}

.post-layout-item .author-info {
    display: flex;
    align-items: center;
    column-gap: 12px;
}

.post-layout-item .author-info li img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.post-layout-item .author-info li a {
    display: block;
    line-height: 1;
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 500;
    letter-spacing: 1px;
}

@media (max-width: 767px){
    .post-layout-item .author-info li a:last-child{
        margin-top: 5px;
    }
}

/* Varticle Post Carousel */
.post-layout-2 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 30px;
}
.vartical-post-carousel{
    height: 405px;
    overflow: visible;
}
@media (max-width: 767px){
    .post-layout-2 {
        grid-template-columns: 1fr;
    }
    .post-layout-2 article.post-layout-item .post-thumb{
        height: 280px;
    }
    .vartical-post-carousel{
        height: 450px;
    }
}
@media (min-width: 1024px){
    .post-layout-2 {
        grid-template-columns: 1fr 1.5fr 1fr;
        grid-template-rows: repeat(2, 1fr);
        grid-column-gap: 30px;
        grid-row-gap: 30px;
    }

    .post-layout-2 > .post-layout-item:nth-child(1) {
        grid-area: 1 / 1 / 2 / 2;
    }

    .post-layout-2 > .post-layout-item:nth-child(2) {
        grid-area: 2 / 1 / 3 / 2;
    }

    .post-layout-2 > .post-layout-item:nth-child(3) {
        grid-area: 1 / 2 / 3 / 3;
    }

    .post-layout-2 > .post-layout-item:nth-child(4) {
        grid-area: 1 / 3 / 3 / 4;
        position: relative;
    }
    .vartical-post-carousel{
        height: 613px;
        width: 100%;
        position: absolute;
        left: 0;
        top: 0;
    }
}

.post-layout-2 > .post-layout-item:nth-child(4) {
    overflow: hidden;
}

/* Horizontal Post Card */
.horizontal-post-card {
    display: grid;
    grid-template-columns: 100px 1fr;
    align-items: center;
    grid-column-gap: 15px;
    grid-auto-flow: dense;
}

.horizontal-post-card .post-content {
    background-color: transparent;
}

.horizontal-post-card .post-thumb {
    height: 100%;
    position: relative;
}

.horizontal-post-card .post-thumb img {
    position: absolute;
    left: 0;
    top: 0;
}

.horizontal-post-card .post-content {
    width: auto;
    margin: 0;
    padding: 0;
}

.horizontal-post-card .post-content h3 {
    font-size: 18px;
}

@media (min-width:993px) {

    .post-layout-item .author-info li a:nth-child(2) {
        color: var(--dl-grey-color);
        margin-top: 5px;
        letter-spacing: 0;
    }

    .post-layout-2 .post-layout-item:nth-child(3) .post-thumb,
    .post-layout-1 .post-layout-item:nth-child(3) .post-thumb {
        height: 370px;
    }

    .post-layout-2 .post-layout-item:nth-child(3) .post-content,
    .post-layout-1 .post-layout-item:nth-child(3) .post-content {
        padding: 30px;
    }

    .post-layout-2 .post-layout-item:nth-child(3) .post-content h3,
    .post-layout-1 .post-layout-item:nth-child(3) .post-content h3 {
        font-size: 28px;
        line-height: 34px;
    }
}

/* Share Icon */
.share-icon {
    margin-left: auto;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    position: relative;
}

.share-icon .share {
    background-color: var(--dl-bg-light-red);
    width: 45px;
    height: 45px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.share-icon .share svg {
    color: var(--dl-grey-color);
    width: 22px;
    height: 22px;
}

.share-icon ul {
    background-color: var(--dl-white-color);
    border: 1px solid var(--dl-border-color);
    padding: 20px 15px;
    position: absolute;
    left: 50%;
    bottom: 45px;
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    transform: translateX(-50%);
    visibility: hidden;
    opacity: 0;
    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
    transition: all .8s cubic-bezier(.5, 1, .89, 1);
}

.share-icon .share:hover ul {
    clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
    visibility: visible;
    opacity: 1;
}

.share-icon .share li a svg {
    color: var(--dl-grey-color);
    width: 15px;
    height: 15px;
    transition: all .8s cubic-bezier(.5, 1, .89, 1);
}

.share-icon .share li a:hover svg {
    color: var(--dl-heading-color);
}
/* ... */

